feat: add Aurora UI with dark/light theme

--- a/inventer.html
+++ b/inventer.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Modern UI — Dark / Light</title>
+  <title>Aurora UI — Dark / Light</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
@@ -42,7 +42,7 @@
 
     * {
       box-sizing: border-box;
-      transition: background var(--transition), color var(--transition), border var(--transition);
+      transition: background var(--transition), color var(--transition), border var(--transition), transform var(--transition);
     }
 
     body {
@@ -165,10 +165,10 @@
   <header>
     <button class="theme-toggle" onclick="toggleTheme()">🌙 / ☀️</button>
 
-    <h1>Modern Web UI</h1>
+    <h1>Aurora UI</h1>
     <p>
-      Clean, scalable interface with professional Dark & Light modes —
-      perfect for SaaS and dashboards.
+      Modern, clean and scalable interface with professional Dark & Light modes —
+      perfect for SaaS platforms and dashboards.
     </p>
 
     <button class="btn">Get Started</button>
@@ -178,11 +178,11 @@
     <div class="grid">
       <div class="card">
         <h3>Dark / Light Mode</h3>
-        <p>Automatic theme switching with smooth transitions.</p>
+        <p>Smooth theme switching with saved user preference.</p>
       </div>
       <div class="card">
-        <h3>Responsive UI</h3>
-        <p>Optimized for all screen sizes and devices.</p>
+        <h3>Responsive Design</h3>
+        <p>Looks perfect on desktop, tablet and mobile devices.</p>
       </div>
       <div class="card">
         <h3>Production Ready</h3>
@@ -192,7 +192,7 @@
   </section>
 
   <footer>
-    © 2026 • Built by Babajan
+    © 2026 • Aurora UI by Babajan
   </footer>
 
   <script>
